# ParticleCover

./: #junk#  &1  &2  .gitignore  .gitmodules  2>&1  Documentation_for_Algorithm.md  README.md  Spacepoints Divider Algorithm.ipynb  Wedge Generator Algorithm - Updated.ipynb  algo.py  converter.py  cover.py  data.py  diffOutput.txt  environment.yml  eventdata.py  generate_data.py  gmon.out  junk  main.c  main.py  messingaround.py  michelle.ipynb  partition.py  patchMaker  reader.py  soph_data.csv  spaceptcollection.py  test_modules.py  toVideo.py  triplets.py  updated_data_1.csv  updated_data_150_points.csv  updated_generate_data.py  wedgecover.py  wedgedata.py
.ipynb_checkpoints/: michelle-checkpoint.ipynb
C/: .gitignore  CMakeLists.txt  cOutput.txt  dataset.c  debug.ipynb  environment.c  event.c  header.h  line.c  linegenerator.c  main.c  main.cpp  makePatch_alignedtoLine.c  parallelogram.c  parallelogram_v1.c  point.c  point.cpp  readme.md  test.sh  trace.md  util.c  util.cpp  vector.c  wedgecover.c  wedgecover.cpp  wedgecover.h  wedgepatch.c  wedgepatch.cpp  wedgesuperpoint.c  wedgesuperpoint.cpp  wedgetest.c
C/include/: constants.h  debug.h  parser.h  test.h  types.h  wedgecover.h
C/reference/: makePatch_alignedtoLine.cpp
C/src/: CMakeLists.txt  debug.c  debug.cxx  main.c  main.cxx  parser.c  parser.cxx
CPP/: README.md  cppOutput.txt  environment.c  header.h  makePatch_alignedtoLine.cpp  makefile  pythonOutput.txt  vector.c
David/: slope_partition.py
Michelle/: cover.py  michelle1.py  partition.py  testing.py  updated_generate_data.py
Muchang/: data.py  (+7 more)
(+54 files in other folders)
